--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "homepage": "https://leandroeffgen8.github.io/estacionamento_react_typescript",
   "name": "estacionamento_ts",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
+  "homepage": "http://leandroeffgen.com.br/projects/estacionamento/",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-toastify": "^10.0.5",
-    "sweetalert2": "^11.12.3"
+    "sweetalert2": "^11.12.3",
+    "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
@@ -27,7 +27,6 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
-    "gh-pages": "^6.1.1",
     "typescript": "^5.2.2",
     "vite": "^5.3.4"
   }
